Add backend integration with firebase
Description:
 - fix action bar display
 - add login authentication
 - fix data not being displayed issue
 - add data storage

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="Reference Generator"
+        android:name=".ReferenceGeneratorApplication"
         android:theme="@style/Theme.ReferenceGenerator">
 
         <activity
